tests/rosetta/out/Scala/angle-difference-between-two-bearings-1.scala
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
object angle_difference_between_two_bearings_1 {
  def angleDiff(b1: Double, b2: Double): Double = {
    val d = b2 - b1
    if (d < 0 - 180) {
      return d + 360
    }
    if (d > 180) {
      return d - 360
    }
    return d
  }
  
  def main(args: Array[String]): Unit = {
    var testCases = scala.collection.mutable.ArrayBuffer(List(20, 45), List(0 - 45, 45), List(0 - 85, 90), List(0 - 95, 90), List(0 - 45, 125), List(0 - 45, 145), List(29.4803, 0 - 88.6381), List(0 - 78.3251, 0 - 159.036))
    for(tc <- testCases) {
      println(angleDiff((tc).apply(0), (tc).apply(1)))
    }
  }
}
